--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ header {
     text-transform: uppercase;
 }
 
-#container {
+.container {
     width: 100%;
     height: 70vh;
     display: flex;
@@ -58,4 +58,14 @@ header {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+}
+
+.recipe {
+    height: 400px;
+    width: 500px;
+    border: 1px solid #bacdd8;
+    border-radius: 5px;
+    padding: 10px 5px;
+    text-align: center;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
