--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,12 @@ header {
     text-align: center;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+
+img {
+    height: 120px;
+    border-radius: 10px;
+}
+
+.card-details > div {
+    text-align: center;
+}
